<resources>
    <string name="app_name">Weather_App</string>
    <string name="location_weather">Add my location</string>
    <string name="degree">%1$d°C</string>
    <string name="city">City</string>
    <string name="add">Add</string>
    <string name="an_image">An image</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="weather_app">Today</string>
    <string name="source">Source</string>
    <string name="openweathermap_org">openweathermap.org</string>
    <string name="delete">Delete</string>
    <string name="add_a_weather">Add a weather</string>

</resources>