<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.weather_app.details.DetailsViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motion_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/app_animation_controller"
            app:motionDebug="SHOW_PATH"
            android:minHeight="80dp"
            app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed"  >

            <ImageView
                android:id="@+id/background"
                android:layout_width="0dp"
                android:layout_height="1000dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/background"
                android:contentDescription="@string/an_image" />

            <ImageView
                android:id="@+id/moon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_moon"
                app:tint="?colorOnPrimary"
                android:contentDescription="@string/an_image" />

            <TextView
                android:id="@+id/credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_app"
                android:textSize="24sp"
                android:textColor="?colorOnPrimary" />
        </androidx.constraintlayout.motion.widget.MotionLayout>
    </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_anchor="@+id/nestedScrollView"
            app:layout_anchorGravity="center"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/normal_16"
                    android:text="@{viewModel.selectedProperty.name}"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.466"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.041"
                    tools:text="Hello" />

                <ImageView
                    android:id="@+id/weather_image"
                    android:layout_width="158dp"
                    android:layout_height="102dp"
                    android:layout_marginTop="@dimen/normal_16"
                    app:imageUrl="@{viewModel.selectedProperty}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/place"
                    tools:src="@drawable/ic_moon"
                    android:contentDescription="@string/an_image" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/weather_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weather_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:shadowColor="#FF32"
                    app:cardCornerRadius="5dp"
                    android:layout_margin="15dp"
                    app:cardElevation="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/normal_16"
                        android:text="@{viewModel.selectedProperty.description}"
                        android:textSize="22sp"
                        android:textStyle="bold"

                        tools:text="Clouds" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/weather_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/normal_16"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weather_description"
                    app:toCelsius="@{viewModel.selectedProperty}"
                    tools:text="33°C" />
                <!--        TEMPERATURE-->

                <TextView
                    android:id="@+id/weather_temp_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_24"
                    android:text="@string/temperature"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.098"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weather_temp" />

                <TextView
                    android:id="@+id/celsius_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/celsius"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.831"
                    app:layout_constraintStart_toEndOf="@id/weather_temp_text"
                    app:layout_constraintTop_toBottomOf="@id/weather_temp" />

                <TextView
                    android:id="@+id/source_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="@dimen/normal_16"
                    android:text="@string/source"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/delete_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weather_temp_text" />

                <TextView
                    android:id="@+id/uri_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_24"
                    android:layout_marginBottom="@dimen/normal_16"
                    android:text="@string/openweathermap_org"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/delete_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.727"
                    app:layout_constraintStart_toEndOf="@id/source_text"
                    app:layout_constraintTop_toBottomOf="@id/celsius_text" />

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/normal_16"
                    android:layout_marginTop="@dimen/normal_16"
                    android:layout_marginBottom="1dp"
                    android:text="@string/delete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/uri_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>